<resources>
    <string name="app_name">Proyecto</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ilUserName">Username</string>
    <string name="ilPassword">Password</string>
    <string name="etEmptyUserNameError">Usuario vacío.</string>
    <string name="etEmptyPasswordError">Contraseña vacía.</string>
    <string name="etInvalidUserNameError">Usuario incorrecto.</string>
    <string name="etInvalidPasswordError">Contraseña incorrecta.</string>
    <string name="getCipherError">Failed to get Cipher</string>
    <string name="failedCipherError">Failed to init Cipher</string>
    <string name="deviceHardwareNotDetected">Fingerprint Scanner not detected in Device</string>
    <string name="fingerprintPermissionNotGranted">Permission not granted to use Fingerprint Scanner</string>
    <string name="unregisteredFingerprint">Add Lock to your Phone in Settings</string>
    <string name="lockScreenIsSecured">You need to add atleast 1 type of lock</string>
    <string name="accessApp">Place your finger on Scanner to access the app.</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_title">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="url_title">Your URL</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tbMainTitle">Comandas</string>
    <string name="productAdded">añadida</string>
    <string name="unselectedProduct">No ha seleccionado ningún producto</string>
    <string name="table">Mesa</string>
    <string name="tableAdded">añadida</string>
    <string name="theTable">La mesa</string>
    <string name="cccupiedTable">está ocupada</string>
    <string name="reservedTable">está reservada</string>
    <string name="conexionError">No tienes conexión</string>
    <string name="total">Total:</string>
    <string name="euro">€</string>
    <string name="bar">Barra</string>
    <string name="tbInvoicesTitle">Facturas</string>
    <string name="totalClients">Clientes totales:</string>
    <string name="totalPrice">Precio total:</string>
    <string name="place">Zona:</string>
    <string name="itPayment">Realizar Pago</string>
    <string name="addCommand">Añadir Comandas</string>
    <string name="seeCommands">Ver Comandas</string>
    <string name="select">Seleccione una opción</string>
    <string name="invoiceDeleted">Factura borrada</string>
    <string name="des">Deshacer</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="print">¿Desea imprimir la factura?</string>
    <string name="print2">Impresión</string>
    <string name="send">¿Desea compartir la factura?</string>
    <string name="send2">Compartir</string>
    <string name="document">document</string>
    <string name="share">Share PDF file</string>
    <string name="shareError">Error, no se ha podido enviar.</string>
    <string name="dash">-</string>
    <string name="sendInvoice">Compartir factura</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="drinks">Bebidas</string>
    <string name="refreshments">Refrescos</string>
    <string name="beer">Cerveza</string>
    <string name="water">Agua</string>
    <string name="entries">Entradas</string>
    <string name="salads">Ensaladas</string>
    <string name="pastes">Pastas</string>
    <string name="soups">Sopas</string>
    <string name="sort">Sort</string>
    <string name="byNameAsc">By Name [A-Z]</string>
    <string name="byNameDesc">By Name [Z-A]</string>
    <string name="byPriceAsc">By price [A-Z]</string>
    <string name="byPriceDesc">By price [Z-A]</string>
    <string name="byTimeAsc">By Time [A-Z]</string>
    <string name="byTimeDesc">By Time [Z-A]</string>
    <string name="link">Unir</string>
    <string name="coma">,</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_15">15</string>
    <string name="_14">14</string>
    <string name="_19">19</string>
    <string name="_18">18</string>
    <string name="_20">20</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="payConfirm">Estás seguro de que quieres realizar el pago?</string>
    <string name="payConfirmTitle">Pago</string>
    <string name="linkError">No se pueden unir mesas unidas</string>
    <string name="deleteError">No se pueden borrar mesas unidas</string>
    <string name="cantDelete">No puedes borrar mesas unidas</string>
    <string name="example">Example</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="total2">Total</string>
    <string name="totalCom">Total: 0 €</string>
    <string name="history">Historial</string>

</resources>
