<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itSearch"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/itFilter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/filter"
        app:showAsAction="always|withText">
        <menu>
            <item
                android:id="@+id/itBebidas"
                android:title="@string/drinks">
                <menu>
                    <item
                        android:id="@+id/sbItRefrescos"
                        android:title="@string/refreshments" />
                    <item
                        android:id="@+id/sbItCerveza"
                        android:title="@string/beer" />
                    <item
                        android:id="@+id/sbItAgua"
                        android:title="@string/water" />
                </menu>
            </item>
            <item android:title="@string/entries" />
            <item android:title="@string/salads" />
            <item android:title="@string/pastes" />
            <item android:title="@string/soups" />
        </menu>
    </item>
    <item
        android:id="@+id/itSort"
        android:icon="@drawable/ic_reorder_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/subItName"
                android:title="@string/byNameAsc" />
            <item
                android:id="@+id/subItNameDes"
                android:title="@string/byNameDesc" />
            <item
                android:id="@+id/subItPrice"
                android:title="@string/byPriceAsc" />
            <item
                android:id="@+id/subItPriceDes"
                android:title="@string/byPriceDesc" />
        </menu>
    </item>
</menu>